add style.css to standardize the format of pages, some stylistic changes

--- a/index.html
+++ b/index.html
@@ -4,17 +4,18 @@
 <head>
     <meta charset="utf-8">
     <title>The Odin Project Recipes</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <hr>
-    <h1 style="text-align:center; ">Recipes</h1>
+    <h1>Recipes</h1>
     <hr>
     <p style="text-align:center">
-    <img src="./images/homer-cooking.gif" alt="Homer Simpson making cereal, which then lights on fire.">
+    <img src="./images/homer-cooking.gif" alt="Homer Simpson making cereal, which then lights on fire." style="height:auto; width:250px;">
     </p>
     <h2 style="font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">
-    <ul>
+    <ul style="text-align:center; list-style: none;">
         <li><a href="./recipes/sekiro-pellets.html">Sekiro: Pellets</a></li>
         <li><a href="./recipes/gungeon-meatbun.html">Enter the Gungeon: Meatbun</a></li>
         <li><a href="./recipes/overwatch-popsicles.html">Overwatch: Popsicles</a></li>
