--- a/recipes/sekiro-pellets.html
+++ b/recipes/sekiro-pellets.html
@@ -4,16 +4,21 @@
 <head>
     <meta charset="utf-8">
     <title>Sekiro: Pellets</title>
+    <link rel="stylesheet" href="../style.css">
 </head>
 
 <body>
-    <h1 style="font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif">Sekiro: Pellets</h1>
+    <hr>
+    <h1>Sekiro: Pellets</h1>
+    <hr>
+    <p style="text-align:center">
     <img src="../images/sekiro-pellets.jpeg" alt="Pellet balls from the game Sekiro falling from bag to table">
-    <h2 style="font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif">A Shinobi's Best Friend</h2>
+    </p>
+    <h2>A Shinobi's Best Friend</h2>
     <p><em>While traipsing around Ashina a shinobi will undoubtedly become parched and famished, and when the healing
         gourd goes dry you will want a healthy supply of <strong>pellets</strong>. These savory snacks are chock-full
         nutty-goodness and are accented with a bit of white chocolate and cranberry.</em></p>
-    <h3 style="font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif"><u>Ingredients:</u></h3>
+    <h3><u>Ingredients:</u></h3>
     <ul>
         <!-- Note you can use "Entities" like the fractional numbers here-->
         <li>&frac14; cup macadamia nuts </li>
@@ -28,18 +33,18 @@
         <li>&frac12; cup dried cranberries</li>
         <li>&frac34; cup white chocolate chips</li>
     </ul>
-    <h3 style="font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif"><u>Steps:</u></h3>
+    <h3><u>Steps:</u></h3>
     <ol>
-        <p><li>Place the <strong>macadamia nuts</strong>, <strong>sunflower seeds</strong>, and <strong>cashews</strong> 
+        <li>Place the <strong>macadamia nuts</strong>, <strong>sunflower seeds</strong>, and <strong>cashews</strong> 
             in a food processor. Pulse until the nuts are completely crumbled. Add the rest of the ingredients and blend 
-            until completely combined.</li></p>
-        <p><li>Transfer the mixture into a bowl to make sure you don’t cut yourself with the blade of the food 
+            until completely combined.</li>
+        <br><li>Transfer the mixture into a bowl to make sure you don’t cut yourself with the blade of the food 
             processor. Take about a tablespoon of the mixture and form a ball in your hand. Place on a tray 
-            with parchment paper. Repeat this with the rest of the mixture.</li></p>
-        <p><li>Add some white sesame seeds to a ziplock bag. Take each ball and toss it until covered with sesame 
+            with parchment paper. Repeat this with the rest of the mixture.</li>
+        <br><li>Add some white sesame seeds to a ziplock bag. Take each ball and toss it until covered with sesame 
             seeds. Place back on the tray with parchment paper. Repeat this with the remaining balls. Chill 
-            for one hour.</li></p>
-        <p><li>Transfer the balls into a airtight container. <em>Can be stored in the refrigerator for up to two weeks.</em></li></p>  
+            for one hour.</li>
+        <br><li>Transfer the balls into a airtight container. <em>Can be stored in the refrigerator for up to two weeks.</em></li>  
     </ol>
     <p><a href="../index.html">Back to main page</a></p>
 </body>
