--- a/recipes/gungeon-meatbun.html
+++ b/recipes/gungeon-meatbun.html
@@ -4,17 +4,22 @@
 <head>
     <meta charset="utf-8">
     <title>Enter the Gungeon Meatbun</title>
+    <link rel="stylesheet" href="../style.css">
 </head>
 
 <body>
-    <h1 style="font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif">Enter the Gungeon: Meatbuns</h1>
+    <hr>
+    <h1>Enter the Gungeon: Meatbuns</h1>
+    <hr>
+    <p style="text-align:center">
     <img src="../images/gungeon-meatbun.jpeg" alt="An asian meatbun">
-    <h2 style="font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif">A Delicious and Hearty Snack for Dungeon Crawling</h2>
+    </p>
+    <h2>A Delicious and Hearty Snack for Dungeon Crawling</h2>
     <p><em>Cautiously winding downward, moving from floor to floor, a bullet hugs its gun and lets loose at anything that moves.
         The smell of gunpowder is prevalant and pervasive...until a chest is cracked open and the savory smell of <strong>meatbuns</strong> 
         fills the air...</em></p>
-    <h3 style="font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif"><u>Ingredients:</u></h3>
-    <h4 style="font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif">Bao Dough:</h4>
+    <h3><u>Ingredients:</u></h3>
+    <h4>Bao Dough:</h4>
     <ul>
         <li>1&frac12; tsp yeast</li>
         <li>1 cup warm water</li>
@@ -26,7 +31,7 @@
         <li>1 tsp fenugreek, ground</li>
         <li>2 tsp baking powder</li>
     </ul>
-    <h4 style="font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif">Filling:</h4>
+    <h4>Filling:</h4>
     <ul>
         <li>1&frac12; lbs boneless short ribs</li>
         <li>2 tbsp vegetable oil</li>
@@ -47,32 +52,32 @@
         <li>1 bell pepper, diced</li>
         <li>1/2 onion, diced</li>
     </ul>
-    <h3 style="font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif"><u>Steps:</u></h3>
-    <h4 style="font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif">Dough:</h4>
+    <h3><u>Steps:</u></h3>
+    <h4>Dough:</h4>
     <ol>
         <li>Mix the yeast, water, coconut oil, and honey. Allow this to rest for 5 minutes or until the yeast becomes active.</li>
-        <li>In the bowl of a stand mixer, combine the flour, salt, fennel seed, fenugreek, and baking powder. Set the mixer to the lowest setting and slowly add the yeast mixture. Mix until it all comes together.</li>
-        <li>Place the dough in a oiled bowl and cover. Let it rest until you are ready to start making the bao.</li>
+        <br><li>In the bowl of a stand mixer, combine the flour, salt, fennel seed, fenugreek, and baking powder. Set the mixer to the lowest setting and slowly add the yeast mixture. Mix until it all comes together.</li>
+        <br><li>Place the dough in a oiled bowl and cover. Let it rest until you are ready to start making the bao.</li>
     </ol>
-    <h4 style="font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif">Filling:</h4>
+    <h4>Filling:</h4>
     <ol>
-        <p><li>Preheat your oven to 375℉. Place the ginger, lemongrass, cinnamon sticks and star anise on a baking tray. Bake for 15 minutes. Generously season the short ribs with salt and pepper. </li></p>
-        <p><li>Once the baking time has passed, remove the tray and reduce the oven heat to 325℉. Place a dutch oven (or other large oven safe pot) with olive oil over medium-high heat.</li></p>
-        <p><li>Add the garlic, lemongrass, ginger, cinnamon sticks and star anise. Allow this to cook for about 5 minutes. Cook each of the short ribs until all the sides are browned. </li></p>
-        <p><li>Mix the soy sauce, hoisin, rice wine, brown sugar, gochujang, and beef broth together. Pour them into the pot.</li></p>
-        <p><li>Add the meat and bring to a slight boil. Place the dutch oven (covered) in the oven and cook for 3-4 hours or until the meat is tender.</li></p>
-        <p><li>Thirty minutes before the beef is finished cooking, place a pan over medium-high heat. Add the diced bell peppers and onions. Cook until softened, about 10 minutes. Set aside.</li></p>
-        <p><li>After the meat is done cooking, it is time to prepare the filling. Take the beef and shred it in a bowl.</li></p>
-        <p><li>Add the scallions, bell pepper, and onions. Mix until well combined. Feel free to add some of the sauce the meat was cooking in. Make sure to not add too much because it will make the filling too wet and that make the dough soggy. Season with salt and pepper.</li></p>
+        <li>Preheat your oven to 375℉. Place the ginger, lemongrass, cinnamon sticks and star anise on a baking tray. Bake for 15 minutes. Generously season the short ribs with salt and pepper. </li>
+        <br><li>Once the baking time has passed, remove the tray and reduce the oven heat to 325℉. Place a dutch oven (or other large oven safe pot) with olive oil over medium-high heat.</li>
+        <br><li>Add the garlic, lemongrass, ginger, cinnamon sticks and star anise. Allow this to cook for about 5 minutes. Cook each of the short ribs until all the sides are browned. </li>
+        <br><li>Mix the soy sauce, hoisin, rice wine, brown sugar, gochujang, and beef broth together. Pour them into the pot.</li>
+        <br><li>Add the meat and bring to a slight boil. Place the dutch oven (covered) in the oven and cook for 3-4 hours or until the meat is tender.</li>
+        <br><li>Thirty minutes before the beef is finished cooking, place a pan over medium-high heat. Add the diced bell peppers and onions. Cook until softened, about 10 minutes. Set aside.</li>
+        <br><li>After the meat is done cooking, it is time to prepare the filling. Take the beef and shred it in a bowl.</li>
+        <br><li>Add the scallions, bell pepper, and onions. Mix until well combined. Feel free to add some of the sauce the meat was cooking in. Make sure to not add too much because it will make the filling too wet and that make the dough soggy. Season with salt and pepper.</li>
     </ol>
-    <h4 style="font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif">Assembling the Bao:</h4>
+    <h4>Assembling the Bao:</h4>
     <ol>
-        <p><li>Take the dough and split them into small portions of about 50 grams. To make a bao, take one of the dough portions and roll it out into a circle. Avoid making each portion too thin.</li></p>
-        <p><li>Add a small portion of meat. It is very important to avoid overfilling these. Take one of the ends of the dough and pinch it with the opposite end.</li></p>
-        <p><li>Pinch the other two flat edges upwards. You should have something that looks similar to the left picture. Next, take two of the corners and pinch them towards the center.</li></p>
-        <p><li>Take the other corners and pinch in the same way. After it has all been pinched together, twist the bunched group to seal the bao completely shut. Repeat for the remain portions.</li></p>
-        <p><li>Heat a pan over medium- high heat with a bit of nonstick spray. Add the bao to the pan, make sure to give each an ½ inch space around itself. Pan fry the bao until the bottoms turn golden brown.</li></p>
-        <p><li>Add &frac14; cup of water to the pan. Cover and let steam for 5 minutes, or until the water has evaporated completely.</li></p>
+        <li>Take the dough and split them into small portions of about 50 grams. To make a bao, take one of the dough portions and roll it out into a circle. Avoid making each portion too thin.</li>
+        <br><li>Add a small portion of meat. It is very important to avoid overfilling these. Take one of the ends of the dough and pinch it with the opposite end.</li>
+        <br><li>Pinch the other two flat edges upwards. You should have something that looks similar to the left picture. Next, take two of the corners and pinch them towards the center.</li>
+        <br><li>Take the other corners and pinch in the same way. After it has all been pinched together, twist the bunched group to seal the bao completely shut. Repeat for the remain portions.</li>
+        <br><li>Heat a pan over medium- high heat with a bit of nonstick spray. Add the bao to the pan, make sure to give each an ½ inch space around itself. Pan fry the bao until the bottoms turn golden brown.</li>
+        <br><li>Add &frac14; cup of water to the pan. Cover and let steam for 5 minutes, or until the water has evaporated completely.</li>
     </ol>
     <p><a href="../index.html">Back to main page</a></p>
 </body>
