--- a/recipes/overwatch-popsicles.html
+++ b/recipes/overwatch-popsicles.html
@@ -3,15 +3,20 @@
 <head>
     <meta charset="utf-8">
     <title>Overwatch: Popsicles</title>
+    <link rel="stylesheet" href="../style.css">
 </head>
 
 <body>
-    <h1 style="font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif">Overwatch: Popsicles</h1>
+    <hr>
+    <h1>Overwatch: Popsicles</h1>
+    <hr>
+    <p style="text-align:center">
     <img src="../images/overwatch-popsicles.jpeg" alt="A yellow popsicle fettered in purple candy stringers on top of a cutting board">
-    <h2 style="font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif">A Cool Treat for Sweltering Times</h2>
+    </p>
+    <h2>A Cool Treat for Sweltering Times</h2>
     <p><em>As battles rage, somtimes the eye of the strom descends on the battleground. This welcome respite is often unexpected, and what better way to celebrate than with a tangy and sweet treat. </em></p>
-    <h3 style="font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif"><u>Ingredients:</u></h3>
-    <h4 style="font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif">Popsicles:</h4>
+    <h3><u>Ingredients:</u></h3>
+    <h4>Popsicles:</h4>
     <ul>
         <li>1 cup pineapple chunks</li>
         <li>&frac12; cup mango</li>
@@ -19,12 +24,12 @@
         <li>2 cups coconut milk</li>
         <li>10 drops yellow food dye</li>
     </ul>
-    <h4 style="font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif">Candy Fetters:</h4>
+    <h4>Candy Fetters:</h4>
     <ul>
         <li>1 cup blue candy melts</li>
         <li>2 tbsp coconut oil</li>
     </ul>
-    <h3 style="font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif"><u>Steps:</u></h3>
+    <h3><u>Steps:</u></h3>
     <ol>
         <p><li>Place the pineapple and mango in a blender and blend until smooth. Add the coconut milk and sugar. Blend until completely smooth and well combined. Add the food dye and mix well.</li></p>
         <p><li>Transfer the mixture into your popsicle molds. Place the popsicle sticks in, cover, and place in the freezer overnight (at least 12 hours). </li></p>
